added node hangman game to portfolio

--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
                     <!-- START portfolio project card -->
                     <div class='card'>
                         <div class='card-image'>
+                            <img src='./assets/images/node-hangman.png'>
+                            <!-- <span class='card-title'>Chicago Trivia</span> -->
+                        </div>
+                        <div class='card-content blue-grey lighten-5'>
+                            <h5 class='project-title'>Node Hangman</h5>
+                            <p>Node_hangman is a command line version of a word guessing game.</p>
+                            <p>Node_hangman chooses a word at random from its dictionary and the user guesses letters to solve the word.  The user is limited to 6 incorrect guesses before losing the game.  Duplicate guesses do not count as incorrect guesses.</p>
+                            <p>Following a correct guess, node_hangman will reveal the location of the correct letters guessed.  After solving the puzzle, the user can choose to play again with a new word.  If all words from the dictionary have been used, the program notifies the user and end the game.</p>
+                            <h5>Technologies Used</h5>
+                            <p>Node.js; node packages: inquirer; JavaScript</p>
+                        </div>
+                        <div class='section card-footer blue-grey darken-2'>
+                            <a href='https://drive.google.com/file/d/1k2y7qerTk4XV6zCHzEFGBWXGLlP4P-rl/view' class='nav-light' target='_blank'>Watch the video</a>
+                            <a href='https://github.com/jmdahle/node_hangman' class='nav-light' target='_blank'>View the code</a>
+                        </div>
+                    </div>
+                    <!-- END portfolio project card -->
+                </div>
+                <div class='col s12 m12 l6'>
+                    <!-- START portfolio project card -->
+                    <div class='card'>
+                        <div class='card-image'>
                             <img src='./assets/images/liri.png'>
                             <!-- <span class='card-title'>Chicago Trivia</span> -->
                         </div>
@@ -98,11 +120,14 @@
                         </div>
                         <div class='section card-footer blue-grey darken-2'>
                             <a href='https://drive.google.com/file/d/1vQ2Do_Ehb5uhGAL39e_lR7AZehFF6tvi/view' class='nav-light' target='_blank'>Watch the video</a>
-                            <a href='https://github.com/jmdahle/liri' class='nav-light' target='_blank'>View the code</a>
+                            <a href='https://github.com/jmdahle/liri.png' class='nav-light' target='_blank'>View the code</a>
                         </div>
                     </div>
                     <!-- END portfolio project card -->
                 </div>
+            </div>
+            <!-- Second set of projects -->
+            <div class='row'>
                 <div class='col s12 m12 l6'>
                     <!-- START portfolio project card -->
                     <div class='card'>
@@ -129,9 +154,6 @@
                     </div>
                     <!-- END portfolio project card -->
                 </div>
-            </div>
-            <!-- Second set of projects -->
-            <div class='row'>
                 <div class='col s12 m12 l6'>
                     <!-- START portfolio project card -->
                     <div class='card'>
@@ -154,6 +176,9 @@
                     </div>
                     <!-- END portfolio project card -->
                 </div>
+            </div>
+            <!-- Third set of projects -->
+            <div class='row'>
                 <div class='col s12 m12 l6'>
                     <!-- START portfolio project card -->
                     <div class='card'>
@@ -175,9 +200,6 @@
                     </div>
                     <!-- END portfolio project card -->
                 </div>
-            </div>
-            <!-- Third set of projects -->
-            <div class='row'>
                 <div class='col s12 m12 l6'>
                     <!-- START portfolio project card -->
                     <div class='card'>
@@ -197,10 +219,6 @@
                             <a href='https://github.com/jmdahle/Word-Guess-Game' class='nav-light' target='_blank'>View the code</a>
                         </div>
                     </div>
-                    <!-- END portfolio project card -->
-                </div>
-                <div class='col s12 m12 l6'>
-                    <!-- START portfolio project card -->
                     <!-- END portfolio project card -->
                 </div>
             </div>
