added FriendFinder project

--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
+                    <img src='./assets/images/friend-finder.png'>
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>FriendFinder</h5>
+                    <p>Complete Compatability.  Calculated!  FriendFinder is a compatability calculator that compares a user's answers to a quiestionnaire to find "friends" with similar responses.
+                    </p>
+                    <h5>Technologies Used</h5>
+                    <p>Server: Node.js, Express, Path; Client: JQuery, JavaScript, HTML, CSS, Bootstrap</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://afternoon-hamlet-37473.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/FriendFinder' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
                     <img src='./assets/images/liri.png'>
                     <!-- <span class='card-title'>Chicago Trivia</span> -->
                 </div>
@@ -180,7 +198,7 @@
                 </div>
                 <div class='section card-footer blue-grey darken-2'>
                     <a href='https://drive.google.com/file/d/1vQ2Do_Ehb5uhGAL39e_lR7AZehFF6tvi/view' class='nav-light' target='_blank'>Watch the video</a>
-                    <a href='https://github.com/jmdahle/liri.png' class='nav-light' target='_blank'>View the code</a>
+                    <a href='https://github.com/jmdahle/liri' class='nav-light' target='_blank'>View the code</a>
                 </div>
             </div>
             <!-- END portfolio project card -->
