Added Burger World app

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
+                    <img src='./assets/images/burger.png'>
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>Burger World</h5>
+                    <p>Burger is a restuarant app that lets users select (devour) the burgers that are available on the menu, view the burgers that have already been devoured, and add new burgers to the menu.</p>
+                    <h5>Technologies Used</h5>
+                    <p>Heroku (deployment); MySql; Node.js; Node packages: express, handlebars, mysql; JavaScript; Materialize; JQuery; HTML, CSS</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://desolate-peak-46477.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/burger' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
                     <img src='./assets/images/bamazon.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
