added smothii group project

--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
+                    <img src='./assets/images/smothii.png'>
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>Smöthii</h5>
+                    <p>A group project to develop the touch interface for a smoothie vending machine.
+                    </p>
+                    <h5>Technologies Used</h5>
+                    <p>Backend: MySQL, Sequelize; Server: Node.js, Express, Handlebars; Client: JQueryUI, JQuery, JavaScript, HTML, CSS, Bootstrap</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://smothii.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/project2' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
                     <img src='./assets/images/friend-finder.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
