added news-forum homework project

--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
+                    <img src='./assets/images/news-forum.png'>
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>Metal-News-Forum</h5>
+                    <p>The news-forum app allows the user to maintain a private list of articles to read and write comments.</p>
+                    <p>Because the app scrapes a website (hardcoded in `server.js`) for news articles, news-forum provides the ability to open the full article in the "scraped" website source.  This app is designed to promote the source material (for prototyping purposes), not steal it!</p>
+                    <p>The news-forum app also provides a rudimentary strcuture for taking comments about those articles from the user.</p>
+
+                    <h5>Technologies Used</h5>
+                    <p>Heroku (deployment); MongoDB; Node.js; Node packages: express, mongoose, cheerio, JavaScript; Bootstrap; JQuery; HTML, CSS</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://metal-news-forum.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/news-forum' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
                     <img src='./assets/images/burger.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
