added Clicky game

--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
+                    <img src='./assets/images/clicky.png'>
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>Clicky Game</h5>
+                    <p>Clicky is a memory game written using React components.</p>
+                    <p>Can you click them all?.  Your goal is to click on each image card one time.  A point is awarded for the first time any image card is clicked.  But when an image card is clicked a second time, the game ends.</p> 
+                    <h5>Technologies Used</h5>
+                    <p>React, Node, JavaScript, Bootstrap, HTML, CSS</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://jmdahle.github.io/clicky/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/clicky/tree/rawcode' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
                     <img src='./assets/images/news-forum.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
@@ -134,26 +152,6 @@
                 <div class='section card-footer blue-grey darken-2'>
                     <a href='https://drive.google.com/file/d/1IwHMu8Om9yEy1yXvGobTrT4L6lhoPu0G/view?usp=sharing' class='nav-light' target='_blank'>Watch the video</a>
                     <a href='https://github.com/jmdahle/bamazon' class='nav-light' target='_blank'>View the code</a>
-                </div>
-            </div>
-            <!-- END portfolio project card -->
-            <!-- START portfolio project card -->
-            <div class='card'>
-                <div class='card-image'>
-                    <img src='./assets/images/node-hangman.png'>
-                    <!-- <span class='card-title'>Chicago Trivia</span> -->
-                </div>
-                <div class='card-content blue-grey lighten-5'>
-                    <h5 class='project-title'>Node Hangman</h5>
-                    <p>Node_hangman is a command line version of a word guessing game.</p>
-                    <p>Node_hangman chooses a word at random from its dictionary and the user guesses letters to solve the word.  The user is limited to 6 incorrect guesses before losing the game.  Duplicate guesses do not count as incorrect guesses.</p>
-                    <p>Following a correct guess, node_hangman will reveal the location of the correct letters guessed.  After solving the puzzle, the user can choose to play again with a new word.  If all words from the dictionary have been used, the program notifies the user and end the game.</p>
-                    <h5>Technologies Used</h5>
-                    <p>Node.js; node packages: inquirer; JavaScript</p>
-                </div>
-                <div class='section card-footer blue-grey darken-2'>
-                    <a href='https://drive.google.com/file/d/1k2y7qerTk4XV6zCHzEFGBWXGLlP4P-rl/view?usp=sharing' class='nav-light' target='_blank'>Watch the video</a>
-                    <a href='https://github.com/jmdahle/node_hangman' class='nav-light' target='_blank'>View the code</a>
                 </div>
             </div>
             <!-- END portfolio project card -->
@@ -293,6 +291,26 @@
                 <div class='section card-footer blue-grey darken-2'>
                     <a href='https://jmdahle.github.io/Word-Guess-Game/index.html' class='nav-light' target='_blank'>Play the game</a>
                     <a href='https://github.com/jmdahle/Word-Guess-Game' class='nav-light' target='_blank'>View the code</a>
+                </div>
+            </div>
+            <!-- END portfolio project card -->
+            <!-- START portfolio project card -->
+            <div class='card'>
+                <div class='card-image'>
+                    <img src='./assets/images/node-hangman.png'>
+                    <!-- <span class='card-title'>Chicago Trivia</span> -->
+                </div>
+                <div class='card-content blue-grey lighten-5'>
+                    <h5 class='project-title'>Node Hangman</h5>
+                    <p>Node_hangman is a command line version of a word guessing game.</p>
+                    <p>Node_hangman chooses a word at random from its dictionary and the user guesses letters to solve the word.  The user is limited to 6 incorrect guesses before losing the game.  Duplicate guesses do not count as incorrect guesses.</p>
+                    <p>Following a correct guess, node_hangman will reveal the location of the correct letters guessed.  After solving the puzzle, the user can choose to play again with a new word.  If all words from the dictionary have been used, the program notifies the user and end the game.</p>
+                    <h5>Technologies Used</h5>
+                    <p>Node.js; node packages: inquirer; JavaScript</p>
+                </div>
+                <div class='section card-footer blue-grey darken-2'>
+                    <a href='https://drive.google.com/file/d/1k2y7qerTk4XV6zCHzEFGBWXGLlP4P-rl/view?usp=sharing' class='nav-light' target='_blank'>Watch the video</a>
+                    <a href='https://github.com/jmdahle/node_hangman' class='nav-light' target='_blank'>View the code</a>
                 </div>
             </div>
             <!-- END portfolio project card -->
