added keepittogether project

--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
-                    <img src='./assets/images/clicky.png'>
+                    <img src='./assets/images/keepittogether.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
-                    <h5 class='project-title'>Clicky Game</h5>
-                    <p>Clicky is a memory game written using React components.</p>
-                    <p>Can you click them all?.  Your goal is to click on each image card one time.  A point is awarded for the first time any image card is clicked.  But when an image card is clicked a second time, the game ends.</p> 
+                    <h5 class='project-title'>KeepItTogether</h5>
+                    <p>KeepItTogether is a goal-tracking/self-improvement app designed for regular non-Pinterest-perfect people.</p>
+                    <p>Pick your level of commitment, a goal you want to achieve, and track your progress towards meeting your goal.  Visualize your progress and keep track of your achiveved goals.</p> 
                     <h5>Technologies Used</h5>
-                    <p>React, Node, JavaScript, Bootstrap, HTML, CSS</p>
+                    <p>React, Node, JavaScript, MongoDB, Bootstrap, HTML, CSS</p>
                 </div>
                 <div class='section card-footer blue-grey darken-2'>
-                    <a href='https://jmdahle.github.io/clicky/' class='nav-light' target='_blank'>Visit the Site</a>
-                    <a href='https://github.com/jmdahle/clicky/tree/rawcode' class='nav-light' target='_blank'>View the code</a>
+                    <a href='https://keepittogether.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/final_project' class='nav-light' target='_blank'>View the code</a>
                 </div>
             </div>
             <!-- END portfolio project card -->
@@ -222,18 +222,18 @@
             <!-- START portfolio project card -->
             <div class='card'>
                 <div class='card-image'>
-                    <img src='./assets/images/friend-finder.png'>
+                    <img src='./assets/images/clicky.png'>
                 </div>
                 <div class='card-content blue-grey lighten-5'>
-                    <h5 class='project-title'>FriendFinder</h5>
-                    <p>Complete Compatability.  Calculated!  FriendFinder is a compatability calculator that compares a user's answers to a quiestionnaire to find "friends" with similar responses.
-                    </p>
+                    <h5 class='project-title'>Clicky Game</h5>
+                    <p>Clicky is a memory game written using React components.</p>
+                    <p>Can you click them all?.  Your goal is to click on each image card one time.  A point is awarded for the first time any image card is clicked.  But when an image card is clicked a second time, the game ends.</p> 
                     <h5>Technologies Used</h5>
-                    <p>Server: Node.js, Express, Path; Client: JQuery, JavaScript, HTML, CSS, Bootstrap</p>
+                    <p>React, Node, JavaScript, Bootstrap, HTML, CSS</p>
                 </div>
                 <div class='section card-footer blue-grey darken-2'>
-                    <a href='https://afternoon-hamlet-37473.herokuapp.com/' class='nav-light' target='_blank'>Visit the Site</a>
-                    <a href='https://github.com/jmdahle/FriendFinder' class='nav-light' target='_blank'>View the code</a>
+                    <a href='https://jmdahle.github.io/clicky/' class='nav-light' target='_blank'>Visit the Site</a>
+                    <a href='https://github.com/jmdahle/clicky/tree/rawcode' class='nav-light' target='_blank'>View the code</a>
                 </div>
             </div>
             <!-- END portfolio project card -->
